<resources>
    <string name="app_name">FilmShakerKotlin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories\t\t\t</string>
    <string name="title_daily">Daily</string>
    <string name="title_later">Later</string>
    <string name="title_watched">Watched</string>
    <string name="home_fragment_text">This is home fragment.</string>
    <string name="categories_fragment_text">This is categories fragment.</string>
    <string name="daily_fragment_text">This is daily fragment.</string>
    <string name="later_fragment_text">This is later fragment.</string>
    <string name="watched_fragment_text">This is watched fragment.</string>
    <string name="poster_fragment_text">This is poster fragment.</string>
    <string name="shake_message">Shake your phone again to get a new film advice.</string>
    <string name="moviePoster">moviePoster</string>
    <string name="icerik">Earths future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankinds survival: Interstellar travel. A newly discovered wormhole in the far reaches of our solar system allows a team of astronauts to go where no man has gone before, a planet that may have the right environment to sustain human life.
    Earths future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankinds survival: Interstellar travel. A newly discovered wormhole in the far reaches
    Earths future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankinds survival: Interstellar travel. A newly discovered wormhole in the far reaches
    Earths future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankinds survival: Interstellar travel. A newly discovered wormhole in the far reaches
    Earths future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankinds survival: Interstellar travel. A newly discovered wormhole in the far reaches
    </string>
    <string name="movieName">Movie Name</string>
    <string name="director">Director</string>
    <string name="imdb">Imdb</string>
    <string name="rate">Rate</string>
    <string name="made">2014</string>
    <string name="year">Year</string>
    <string name="minute">Minute</string>
    <string name="length">100</string>
    <string name="categories">Categories</string>
    <string name="genres">Adventures,Drama</string>
    <string name="actors">Actors</string>
    <string name="actors_details">Matthew McConaughey, Anne Hathaway, Jessica Chastain</string>
    <string name="scenario">Scenario</string>
    <string name="already_watched">I already watched</string>
    <string name="watch_later">Watch later</string>
    <string name="again_shake">You can shake your phone again to get suggestions.</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="soon">Soon</string>
    <string name="linear_layout_description">linear_layout_description</string>
    <string name="tab_layout">tab_layout</string>
    <string name="tab_item_1_description">tab_item_1_description</string>
    <string name="tab_item_2_description">tab_item_2_description</string>
    <string name="now_playing">now_playing</string>
    <string name="tab_item_3_description">tab_item_3_description</string>
    <string name="view_pager">view_pager</string>
    <string name="recycler_view_description">recycler_view_description</string>
    <string name="infoButton">Info</string>
    <string name="empty_list_message">You haven\'t added any movies yet.</string>
    <string name="poster_view">Poster View</string>
    <string name="tagline">Tagline</string>
    <string name="revenue">Revenue</string>
    <string name="watched_movies">Watched Movies</string>
    <string name="later_movies">Later Movies</string>

</resources>