<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/zeminRenk"
        android:contentDescription="@string/linear_layout_description"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/_20sdp"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:title="@string/categories"
            app:titleTextAppearance="@style/Categories"
            app:titleTextColor="@android:color/white" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab_layout"
            android:textAllCaps="false"
            app:tabGravity="fill"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/gradient1"
            app:tabMode="fixed"
            app:tabTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="?actionBarSize"
            android:layout_weight="1" />
    </LinearLayout>
</layout>
