<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieAllDetail"
            type="com.example.filmshakerkotlin.domain.model.alldetail.MovieAllDetail" />


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.moviedetail.MovieDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/youtubeLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="#000000">


                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/playerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#000"
                    app:autoPlay="false"
                    app:color="@color/zeminRenk">

                </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gradient1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="25dp">

                    <TextView
                        android:id="@+id/fragmanFilmAdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_24sdp"
                        android:maxLines="2"
                        android:text="@{movieAllDetail.title}"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="@string/movieName" />

                    <TextView
                        android:id="@+id/fragmanYonetmenText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_24sdp"
                        android:ellipsize="none"
                        android:maxLines="2"
                        android:overScrollMode="always"
                        android:scrollbars="horizontal"
                        android:scrollHorizontally="true"
                        android:text="@{movieAllDetail.tagline}"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        tools:text="@string/tagline" />
                </LinearLayout>
            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.60"
                android:background="@color/iki">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="4dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:gravity="start"
                            android:orientation="vertical"
                            android:paddingTop="6dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:text="@string/imdb"
                                android:textAllCaps="true"
                                android:textColor="#FFFFFF"
                                android:textSize="17sp"
                                android:textStyle="normal|bold" />

                            <TextView
                                android:id="@+id/fragmanImdbText"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:formattedVoteAverage="@{movieAllDetail.voteAverage}"
                                android:gravity="center"
                                android:textAllCaps="true"
                                android:textColor="@color/textAccent"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                tools:text="@string/rate" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:orientation="vertical"
                            android:paddingTop="6dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:paddingStart="30dp"
                                android:text="@string/year"
                                android:textAllCaps="true"
                                android:textColor="#FFFFFF"
                                android:textSize="17sp"
                                android:textStyle="normal|bold" />

                            <TextView
                                android:id="@+id/fragmanYapimText"
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:onlyYear="@{movieAllDetail.releaseDate}"
                                android:paddingStart="30dp"
                                android:textAllCaps="true"
                                android:textColor="@color/textAccent"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                tools:text="@string/made" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:orientation="vertical"
                            android:paddingTop="6dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:paddingStart="28dp"
                                android:text="@string/minute"
                                android:textAllCaps="true"
                                android:textColor="#FFFFFF"
                                android:textSize="17sp"
                                android:textStyle="normal|bold" />

                            <TextView
                                android:id="@+id/fragmanSureText"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingStart="28dp"
                                android:text="@{movieAllDetail.runtime.toString()}"
                                android:textColor="@color/textAccent"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                tools:text="@string/length" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="12dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/categories"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fragmanKategoriText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:genreText="@{movieAllDetail.genres}"
                            android:textAllCaps="false"
                            android:textColor="@color/textAccent"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            tools:text="@string/genres" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/revenue"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fragmanOyuncularText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:revenueFormatted="@{movieAllDetail.revenue}"
                            android:textAllCaps="false"
                            android:textColor="@color/textAccent"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            tools:text="@string/revenue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/scenario"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ScrollView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="?attr/actionBarSize"
                            android:fadingEdgeLength="?attr/actionBarSize"
                            android:fillViewport="true"
                            android:requiresFadingEdge="vertical"
                            android:scrollbars="vertical">

                            <TextView
                                android:id="@+id/fragmanFilmOzetText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:justificationMode="inter_word"
                                android:text="@{movieAllDetail.overview}"
                                android:textColor="@color/textAccent"
                                android:textSize="16sp"
                                tools:text="@string/icerik" />
                        </ScrollView>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>